# jj

./: .gitignore  CHANGELOG.org  CONTRIBUTING.org  Cargo.toml  README.org  flake.nix  jenkins-server.sh  llms.org  rust-template.json  rustfmt.toml  tasks.org  treefmt.toml
.claude/hooks/: review-stop.sh
.github/scripts/: run-tests.sh
.github/workflows/: integration.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  config.rs  error.rs  follow.rs  jenkins.rs  logging.rs  main.rs  view.rs
crates/cli/tests/: integration.rs  integration_test.rs
crates/lib/: Cargo.toml
crates/lib/src/: build.rs  lib.rs  logging.rs
docs/jenkins/: README.org  jenkins-executable-build-queue-item-example.json
jenkins/: apply-jobs.py  generate-plugins.py  plugins.nix
jenkins/casc/: jenkins.yaml
jenkins/jobs/: build-with-parameters-test.groovy  extended-choice-test.groovy  fail-job.groovy  no-parameters-test.groovy  sleep-job.groovy  unstable-job.groovy
src/: README.org  cli.rs  config.rs  error.rs  jenkins.rs  logging.rs  main.rs
