[workspace]
resolver = "2"
members = [
  "crates/cli",
  "crates/lib",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Logan Barnett <logustus@gmail.com>"]

[workspace.dependencies]
tracing-journald = "0.3"
hash-color-lib = { path = "../hash-color/crates/lib" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tap = "1.0"
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-middleware = "0.4"
regex = "1"
either = "1"
futures = "0.3"
bytes = "1"
url = "2"
serde_url_params = "0.2"
lazy_static = "1.5"
jj-lib = { path = "crates/lib" }
assert_cmd = "2"
predicates = "3"
serial_test = "3"
tempfile = "3"
libc = "0.2"

[profile.dev]
# Prevent large target/debug directories.
debug = false
