[workspace]
resolver = "2"
members = [
  "crates/cli",
  "crates/lib",
]

[workspace.package]
version = "0.5.0"
edition = "2021"
authors = ["Logan Barnett <logustus@gmail.com>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/LoganBarnett/jj"

[workspace.dependencies]
# Foundation infrastructure crate (rust-template-foundation): config and
# logging via the MergeConfig derive and #[foundation_main].  Consumed as a
# git dependency so template improvements arrive via `cargo update`.
rust-template-foundation = { git = "https://github.com/LoganBarnett/rust-template.git", version = ">=0.16" }
tracing-journald = "0.3"
hash-color-lib = { git = "https://github.com/LoganBarnett/hash-color" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tap = "1.0"
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
# HTTP client for the Jenkins REST API.  rustls with the OS cert store
# (rustls-tls-native-roots) replaces the default OpenSSL backend so the musl and
# cross-compiled release binaries build without a system OpenSSL to link.
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls-native-roots"] }
reqwest-middleware = "0.4"
# Compile-time-validated regex literals (regex! expands to a cached &'static
# Regex), so queue-message parsing needs no runtime Regex::new to unwrap.
lazy-regex = "3"
either = "1"
futures = "0.3"
bytes = "1"
url = "2"
serde_url_params = "0.2"
jj-lib = { path = "crates/lib" }
assert_cmd = "2"
predicates = "3"
serial_test = "3"
tempfile = "3"
libc = "0.2"

[profile.dev]
# Prevent large target/debug directories.
debug = false

# ============================================================================
# LINTS
# ============================================================================
# Project-wide ban on the panicking variants of Result/Option, enforced
# via clippy.  Test code is exempted by clippy.toml's
# allow-unwrap-in-tests / allow-expect-in-tests, which cover both
# #[cfg(test)] modules in src/ and integration tests under tests/.
# Member crates opt in by setting [lints] workspace = true.
[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

# ----------------------------------------------------------------------------
# Combinator preference: nudge toward the least powerful construct that
# fits.  These flag manual reimplementations of standard combinators —
# match-on-Option that could be Option::map, if-let-else that could be
# map_or, and so on.  See llms.org "Rule of least power" for the
# principle behind the set.
#
# Configured at "warn" rather than "deny" because some imperative forms
# are genuinely clearer (multi-line bodies, side effects, nested control
# flow); humans can override site-locally with #[allow(...)] and a
# one-line reason.  The defaults push agents toward the combinator form.
manual_map = "warn"
manual_filter = "warn"
manual_filter_map = "warn"
manual_find = "warn"
manual_find_map = "warn"
manual_flatten = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
manual_unwrap_or = "warn"
manual_unwrap_or_default = "warn"
option_if_let_else = "warn"
map_unwrap_or = "warn"
needless_collect = "warn"
unnecessary_fold = "warn"
question_mark = "warn"
single_match_else = "warn"
collapsible_match = "warn"
redundant_pattern_matching = "warn"
