[package]
name = "jj"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "jj"
path = "src/main.rs"

[dependencies]
hash-color-lib = { workspace = true }
jj-lib = { workspace = true }

[target.'cfg(unix)'.dependencies]
tracing-journald = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tap = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
either = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
url = { workspace = true }
serde_url_params = { workspace = true }
lazy_static = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }

[target.'cfg(unix)'.dev-dependencies]
libc = { workspace = true }
