[package]
name = "jj"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Run Jenkins jobs from the command line."
publish = []

[[bin]]
name = "jj"
path = "src/main.rs"

[dependencies]
# Drives the whole CLI lifecycle: the "cli" feature supplies the MergeConfig
# derive that generates Config's CliRaw/ConfigFileRaw, the #[foundation_main]
# entry macro, and CLI logging init.
rust-template-foundation = { workspace = true, features = ["cli"] }
hash-color-lib = { workspace = true }
jj-lib = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
# Compile-time-validated regex for parsing Jenkins' quiet-period `why` messages.
lazy-regex = { workspace = true }
# Either models the queue poll's "wait this long" vs "here is the build" split.
either = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
url = { workspace = true }
# Enables method chaining and reduces superfluous local variables that only
# exist to name intermediate results.  Prefer .tap() over temporary variables
# when it improves readability.
tap = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }

[target.'cfg(unix)'.dev-dependencies]
libc = { workspace = true }

[lints]
workspace = true
